fixed spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -2,6 +2,12 @@
   margin: 5em 0;
 }
 
+h1 {
+  background-color: #000424;
+  color: #fffbfa;
+  padding: 5px;
+}
+
 .group-div {
   width: 100%;
   height: 45em;
@@ -21,6 +27,7 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  margin: 0 auto 5em auto;
 }
 
 #person-checker {
